kubernetes/apps/observability/grafana/instance/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.vzkn.eu/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: observability
spec:
  hostnames:
    - grafana.vzkn.eu
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
